# tutorial-the-definitive-guide-to-celery-and-fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint-and-test.yml
alembic/: env.py
alembic/versions/: 3f72dccf0afc_.py  4124da07b326_.py
app/: main.py
compose/local/fastapi/: entrypoint
compose/local/fastapi/celery/flower/: start
docker/: gunicorn_conf.py
project/: __init__.py  celery_utils.py  config.py  config.py.orig  database.py
project/users/: __init__.py  models.py  tasks.py  views.py
project/users/templates/: form.html  form_socketio.html  form_ws.html
project/ws/: __init__.py  views.py
tests/: conftest.py  test_main.py
