#### poetry ###################################################################
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Minimal Poetry example with Docker Multi-Stage builds"
authors = ["Derek Wan <d.wan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.75.2"
gunicorn = "^20.0.4"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
coverage = "^6.3.2"
flake8-absolute-import = "^1.0.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.2.1"
flake8-no-pep420 = "^2.2.0"
flake8-pie = "^0.15.0"
flake8-print = "^5.0.0"
flake8-simplify = "^0.19.2"
flake8-unused-arguments = "^0.0.10"
isort = "^5.10.1"
poetry-deps-scanner = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
requests = "^2.23.0"

#### black ####################################################################
[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ['py310']

#### coverage #################################################################
[tool.coverage]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = ["# noqa", "raise NotImplementedError"]

#### isort ####################################################################
[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
virtual_env = ".venv/bin/python"

#### pyright ##################################################################
[tool.pyright]
include = ["app", "tests"]
executionEnvironments = [{ root = "app" }]
typeCheckingMode = "strict"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedBaseClass = false
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

#### pytest ###################################################################
[tool.pytest.ini_options]
addopts = ["-rsxX", "--color=auto", "--strict-markers"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
looponfailroots = "src"
minversion = "7.0"
testpaths = "tests"
xfail_strict = true
