#### poetry ###################################################################
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = "The Definitive Guide to Celery and FastAPI"
authors = ["Derek Wan <d.wan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7.7"
asgiref = "^3.5.1"
asyncio-redis = "^0.16.0"
beartype = "^0.10.4"
broadcaster = "^0.2.0"
celery = "^5.2.6"
fastapi = "0.75.2"
flower = "^1.0.0"
gunicorn = "^20.0.4"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
redis = "^4.2.2"
requests = "^2.27.1"
sqlalchemy = "^1.4.36"
uvicorn = { version = "^0.17.6", extras = ["standard"] }
watchgod = "^0.8.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.3.0"
celery-types = "^0.12.0"
coverage = "^6.3.2"
flake8-absolute-import = "^1.0.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.2.1"
flake8-no-pep420 = "^2.2.0"
flake8-pie = "^0.15.0"
flake8-print = "^5.0.0"
flake8-simplify = "^0.19.2"
flake8-unused-arguments = "^0.0.10"
ipython = "^8.3.0"
isort = "^5.10.1"
poetry-deps-scanner = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"

#### black ####################################################################
[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ['py310']

#### coverage #################################################################
[tool.coverage]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = ["# noqa", "raise NotImplementedError"]

#### isort ####################################################################
[tool.isort]
atomic = true
case_sensitive = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
virtual_env = ".venv/bin/python"

#### pyright ##################################################################
[tool.pyright]
include = ["app", "tests"]
exclude = ["alembic"]
executionEnvironments = [{ root = "app" }]
typeCheckingMode = "strict"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUntypedBaseClass = false
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"

#### pytest ###################################################################
[tool.pytest.ini_options]
addopts = ["-rsxX", "--color=auto", "--strict-markers"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
looponfailroots = "src"
minversion = "7.0"
testpaths = "tests"
xfail_strict = true
